--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-
+!DOCTYPE html>
 <html>
 <head>
  <meta charset="utf-8"> 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/support.cs"> <title>Module2-solution</title>
+    <link rel="stylesheet" href="css/support.css"> 
+           <title>Module2-solution</title>
        </head>
        <body> 
         <h1> Our Menu</h1> 
