--- a/Index.html
+++ b/Index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="https://github.com/shivam2271/coursera-test/css/support.css">
 <html>
 <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/support.css">
 <title>bhabhi ki jai</title>
 </head>
 <body> <section class="header">
