--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <link rel="stylesheet" href="css/support.css">
 </head>
 <body> <section class="header">
- <h1>hello</h1>
+ <h1>hello brother</h1>
 </section><section class="middle">></ul>
 </section>
 <section class="footer">
 <p><aclass="r">Home</a> </p>
 <p>
 <a  class="r">Details</a></p>
-<p>  class="r">Contact</a> </p>
+<p>Contact</a> </p>
 </body>
 <p> &copy; Do not copy My idea</p>
 </html>
